; ModuleID = '/home/carl/AnghaBench/git/extr_rerere.c_remove_variant.c'
source_filename = "/home/carl/AnghaBench/git/extr_rerere.c_remove_variant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rerere_id = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64* }

@.str = private unnamed_addr constant [10 x i8] c"postimage\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"preimage\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rerere_id*)* @remove_variant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_variant(%struct.rerere_id* %0) #0 {
  %2 = alloca %struct.rerere_id*, align 8
  store %struct.rerere_id* %0, %struct.rerere_id** %2, align 8
  %3 = load %struct.rerere_id*, %struct.rerere_id** %2, align 8
  %4 = call i32 @rerere_path(%struct.rerere_id* %3, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @unlink_or_warn(i32 %4)
  %6 = load %struct.rerere_id*, %struct.rerere_id** %2, align 8
  %7 = call i32 @rerere_path(%struct.rerere_id* %6, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %8 = call i32 @unlink_or_warn(i32 %7)
  %9 = load %struct.rerere_id*, %struct.rerere_id** %2, align 8
  %10 = getelementptr inbounds %struct.rerere_id, %struct.rerere_id* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64*, i64** %12, align 8
  %14 = load %struct.rerere_id*, %struct.rerere_id** %2, align 8
  %15 = getelementptr inbounds %struct.rerere_id, %struct.rerere_id* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = getelementptr inbounds i64, i64* %13, i64 %16
  store i64 0, i64* %17, align 8
  ret void
}

declare dso_local i32 @unlink_or_warn(i32) #1

declare dso_local i32 @rerere_path(%struct.rerere_id*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
